# lamfo-gpt

./: .dockerignore  .env-example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose-deploy.yml  docker-compose-dev.yml  docker-compose.yml
.cargo/: config.toml  config_example.toml
.github/workflows/: prod.yml
asst/: instructions.md
deploy/: swarm.md
docker_env/: .env  .env-example
docker_env_files/: .env  .env-example
lamfo_gpt/files/: atividades.txt  parcerias.txt  seminarios.txt  sobre.txt
nginx/: Dockerfile  nginx.conf
robert/: instructions.md  robert.toml
robert/files/: membros.txt  oficinas.txt  parcerias.txt  projetos.txt  seminarios.txt  sobre.txt
shell_script/: my_entrypoint.sh
sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql
src/: config.rs  error.rs  main.rs  manager.rs  model.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/ais/: asst.rs  error.rs  function.rs  message.rs  mod.rs  msg.rs
src/embeddings/: error.rs  file.rs  finder.rs  mod.rs  vector.rs
src/embeddings/store/: error.rs  mod.rs
src/lamfo_gpt/: error.rs  mod.rs
src/model/: base.rs  error.rs  message.rs  mod.rs
src/model/store/: error.rs  mod.rs
src/robert/: config.rs  error.rs  mod.rs
src/utils/: ais.rs  cli.rs  error.rs  files.rs  message.rs  mod.rs
src/web/: error.rs  mod.rs  mw_session.rs  routes_chat.rs
