[package]
name = "assist-lamfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.20.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
derive_more = {version = "1.0.0-beta", features = ["from", "display", "deref"] }
dialoguer = "0.11"
console = "0.15"
textwrap = "0.16"
globset = "0.4"
walkdir = "2"
lopdf = "0.32.0"
