[package]
name = "assist-lamfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Open AI

async-openai = "0.20.0"

# Tokio Async
tokio = { version = "1", features = ["full"] }

# Toml

toml = "0.8"

# Json

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.8.2"

# Cli

dialoguer = "0.11"
console = "0.15"
textwrap = "0.16"

# Glob

globset = "0.4"

# Files

walkdir = "2"

# Pdf

lopdf = "0.32.0"

# Web

axum = "0.7.5"
tracing = "0.1"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
tower-http = { version = "0.5.2", features = ["cors"]}
tower-sessions = "=0.12.2"
tower = "0.4.13"

# DB

sqlx = { version = "0.7.4", features = ["postgres", "uuid", "time", "runtime-tokio-rustls"]}
sqlb = "0.4.0"
qdrant-client = "1.10.1"

# Others

derive_more = {version = "1.0.0-beta", features = ["from", "display", "deref"] }
uuid = {version = "1", features = ["v4","fast-rng","serde"]}
